@@ -27,6 +27,12 @@ function AddonLine_Selection_create(){
             case 'isAttempted'.toLowerCase():
                 presenter.isAttempted();
                 break;
+            case 'select'.toLowerCase():
+                presenter.select(params[0]);
+                break;
+            case 'deselect'.toLowerCase():
+                presenter.deselect(params[0]);
+                break;
         }
     };
     presenter.ERROR_CODES = {
@@ -82,6 +88,32 @@ function AddonLine_Selection_create(){
         if (presenter.isShowAnswersActive) presenter.hideAnswers();
         return presenter.isStarted;
     };
+    presenter.select = function(index) {
+        index--;
+        presenter.isStarted = true;
+        var line = presenter.$view.find('#line_'+index);
+        if (line.attr('class') != 'line selected') {
+            if (presenter.singleMode) {
+                presenter.$view.find('.selected').attr('class','line');
+                presenter.selected = [];
+            }
+            line.attr('class','line selected');
+            presenter.selected.push(index);
+        }
+    }
+    presenter.deselect = function(index) {
+        index--;
+        presenter.isStarted = true;
+        var line = presenter.$view.find('#line_'+index);
+        if (line.attr('class') == 'line selected') {
+            if (presenter.singleMode)
+                presenter.selected = [];
+            else
+                presenter.selected.splice(presenter.selected.indexOf(index),1);
+            line.attr('class','line');
+        }
+    }
+
     presenter.initiate = function(view, model){
         presenter.$view = $(view);
         presenter.model = model;
@@ -158,7 +190,7 @@ function AddonLine_Selection_create(){
                     presenter.selected.push(presentId);
                     value = 1;
                 }
-                if (presenter.activity && value == 1)
+                if (presenter.activity)
                     score = presenter.answers[presentId]
                 else
                     score = 0;
@@ -205,32 +237,13 @@ function AddonLine_Selection_create(){
             coordinatesContainer.addClass('coordinates');
             coordinatesContainer.append(xContainer).append(yContainer);
             presenter.wrapper.append(coordinatesContainer);
-
-            function setCalculatedPosition(e) {
+            presenter.wrapper.on('mousemove', function(e) {
                 coordinations.x = e.originalEvent.pageX || e.originalEvent.touches[0].pageX;
                 coordinations.y = e.originalEvent.pageY || e.originalEvent.touches[0].pageY;
                 presenter.mouseSX = parseInt(coordinations.x,10) - parseInt(presenter.wrapper.offset().left,10);
                 presenter.mouseSY = parseInt(coordinations.y,10) - parseInt(presenter.wrapper.offset().top,10);
                 xContainer.find('.value').html(presenter.mouseSX);
                 yContainer.find('.value').html(presenter.mouseSY);
-            }
-
-            var doesElementExist = function() {
-                var $moduleSelector = $('.moduleSelector[data-id="'+presenter.addonID+'"]');
-
-                if ($moduleSelector.length > 0) {
-                    $moduleSelector.on('mousemove', function(e) {
-                        setCalculatedPosition(e);
-                    });
-
-                    clearInterval(interval);
-                }
-            };
-
-            var interval = setInterval(function() { doesElementExist(); }, 500);
-
-            presenter.wrapper.on('mousemove', function(e) {
-                setCalculatedPosition(e);
             });
         }
     }
